--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
     
     <footer class="footer">
       <div class="container footer-container">
-      <div class="footer-main-info">
+        <div class="footer-main-info">
         <a class="logo footer-logo" href="./index.html"
           >Web<span class="footer-logo-accent">Studio</span></a
         >
@@ -428,15 +428,15 @@
           digital marketing & growth solutions.
         </p>
         </div>
-      <div class="foter-sn">
+        <div class="foter-sn">
           <P class="social-media">Social media</P>
           <ul class="footer-sn-list">
-                    <li class="footer-sn-item">
-                      <a href="https://www.instagram.com" class="footer-sn-link">
-                        <svg class="footer-sn-icon" width="24" height="24">
-                          <use href="./images/icons.svg#icon-instagram"></use>
-                        </svg>
-                      </a>
+            <li class="footer-sn-item">
+              <a href="https://www.instagram.com" class="footer-sn-link">
+                <svg class="footer-sn-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
                     </li>
                     <li class="footer-sn-item">
                       <a href="https://www.twitter.com" class="footer-sn-link">
@@ -460,33 +460,32 @@
                       </a>
                     </li>
                     </ul>
-      </div>
-      <div class="subscribe">
+        </div>
+        <div class="subscribe">
           <p class="subscribe-title">Subscribe</p>
-          <form class="subscribe-field">
-            <label for="user-mail" class="scribe-email"></label>
-              <div class="subscribe-form">
-                <input 
-                  name="email" 
-                  class="subscribe-input" 
-                  type="email" 
-                  id="email"
-                  placeholder="E-mail"
-                />
-              
-                <button type="submit"   class="subscribe-btn">Subscribe
-                <svg class="submit-icon"
-                  width="24"
-                  height="24">
-                  <use href="./images/icons.svg#icon-submit"></use>
-                </svg>
-              </button>
-              </div>
+          <form class="subscribe-form">
+            <label for="user-mail" class="scribe-email">
+              <input 
+                name="email" 
+                class="subscribe-input" 
+                type="email" 
+                id="email"
+                placeholder="E-mail"
+              />
+            </label>  
+            <button type="submit"   class="subscribe-btn">Subscribe
+              <svg class="submit-icon"
+                width="24"
+                height="24">
+                <use href="./images/icons.svg#icon-submit"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
     </footer>
 
+<!-- Backdrop and modal -->
     <div class="backdrop" data-modal>
       <div class="modal" >
         <button class="modal-close-btn" type="button" data-modal-close>
