--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@
         <div class="subscribe">
           <p class="subscribe-title">Subscribe</p>
           <form class="subscribe-form">
-            <label for="user-mail" class="scribe-email">
+            <label for="email" class="scribe-email">
               <input 
                 name="email" 
                 class="subscribe-input" 
@@ -490,8 +490,8 @@
       <div class="modal" >
         <button class="modal-close-btn" type="button" data-modal-close>
           <svg class="close-btn-icon" 
-          width="8" 
-          height="8"> 
+            width="8" 
+            height="8"> 
             <use href="/images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
@@ -556,14 +556,12 @@
             </div>
           <div class="form-field">
               <label for="user-comment" class="form-field-name">Comment</label>
-              <div class="contact-form-wrapper">
                 <textarea 
                   name="user-comment" 
                   class="contact-form-message" 
                   placeholder="Text input"
                   id="user-comment"
                 ></textarea>
-              </div>
             </div>
 
           <div class="form-checkbox">
