--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
           <svg class="close-btn-icon" 
             width="8" 
             height="8"> 
-            <use href="/images/icons.svg#icon-close-black"></use>
+            <use href='/images/icons.svg#icon-close-black'></use>
           </svg>
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
@@ -572,7 +572,6 @@
               id="user-privacy"
               value="true" 
             />
-            
               <label for="user-privacy" class="policy-text">I accept the terms and conditions of the <a class="policy-terms" href="">Privacy Policy</a> 
                 <span class="icon-check"> 
                   <svg class="checkbox-icon"
@@ -583,7 +582,6 @@
                   </svg>
                 </span>
               </label> 
-            
           </div>
           <button type="submit" class="submit-btn">Send</button>
       </form>
