--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
           <svg class="close-btn-icon" 
             width="8" 
             height="8"> 
-            <use href='/images/icons.svg#icon-close-black'></use>
+            <use href="/images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
@@ -512,7 +512,7 @@
                   width="18" 
                   height="24"
                 > 
-                  <use href='./images/icons.svg#icon-user'></use>
+                  <use href="./images/icons.svg#icon-user"></use>
                 </svg>
               </div>
             </div>
@@ -531,7 +531,7 @@
                   width="18" 
                   height="24"
                 > 
-                  <use href='./images/icons.svg#icon-phone'></use>
+                  <use href="./images/icons.svg#icon-phone"></use>
                 </svg>
               </div>
             </div>
@@ -550,7 +550,7 @@
                   width="18" 
                   height="24"
                 > 
-                  <use href='./images/icons.svg#icon-email'></use>
+                  <use href="./images/icons.svg#icon-email"></use>
                 </svg>
               </div>
             </div>
@@ -577,7 +577,7 @@
                   <svg class="checkbox-icon"
                     width="10"
                     height="8">
-                      <use href='./images/icons.svg#icon-check'>
+                      <use href="./images/icons.svg#icon-check">
                       </use>
                   </svg>
                 </span>
