--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
           <svg class="close-btn-icon" 
             width="8" 
             height="8"> 
-            <use href="/images/icons.svg#icon-close-black"></use>
+            <use href="./images/icons.svg#icon-close-black"></use>
           </svg>
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
