--- a/index.html
+++ b/index.html
@@ -496,28 +496,28 @@
           </svg>
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
-        <form class="contact-form-field">
+        <form class="contact-form">
           <div class="form-field">
-              <label for="user-name" class="form-field-name">Name</label>
-              <div class="contact-form-wrapper">
-                <input 
+            <label for="user-name" class="form-field-name">Name</label>
+            <div class="contact-form-wrapper">
+              <input 
                   name="user-name" 
                   class="contact-form-input" 
                   type="text" 
                   placeholder=""
                   id="user-name"
                   required 
-                />
-                <svg class="form-icon" 
-                  width="18" 
-                  height="24"
-                > 
-                  <use href="./images/icons.svg#icon-user"></use>
-                </svg>
-              </div>
+              />
+              <svg class="form-icon" 
+                width="18" 
+                height="24"
+              > 
+                <use href="./images/icons.svg#icon-user"></use>
+              </svg>
             </div>
+          </div>
           <div class="form-field">
-              <label for="user-phone" class="form-field-name">Phone</label>
+            <label for="user-phone" class="form-field-name">Phone</label>
               <div class="contact-form-wrapper">
                 <input 
                   name="user-phone" 
@@ -534,9 +534,9 @@
                   <use href="./images/icons.svg#icon-phone"></use>
                 </svg>
               </div>
-            </div>
+          </div>
           <div class="form-field">
-              <label for="user-mail" class="form-field-name">Email</label>
+            <label for="user-mail" class="form-field-name">Email</label>
               <div class="contact-form-wrapper">
                 <input 
                   name="user-mail" 
@@ -553,17 +553,16 @@
                   <use href="./images/icons.svg#icon-email"></use>
                 </svg>
               </div>
-            </div>
-          <div class="form-field">
-              <label for="user-comment" class="form-field-name">Comment</label>
-                <textarea 
-                  name="user-comment" 
-                  class="contact-form-message" 
-                  placeholder="Text input"
-                  id="user-comment"
-                ></textarea>
-            </div>
-
+          </div>
+          <div class="form-comment">
+            <label for="user-comment" class="form-field-name">Comment</label>
+            <textarea 
+              name="user-comment" 
+              class="contact-form-message" 
+              placeholder="Text input"
+              id="user-comment"
+            ></textarea>
+          </div>
           <div class="form-checkbox">
             <input 
               name="user-privacy" 
@@ -572,19 +571,18 @@
               id="user-privacy"
               value="true" 
             />
-              <label for="user-privacy" class="policy-text">I accept the terms and conditions of the <a class="policy-terms" href="">Privacy Policy</a> 
-                <span class="icon-check"> 
-                  <svg class="checkbox-icon"
-                    width="10"
-                    height="8">
-                      <use href="./images/icons.svg#icon-check">
-                      </use>
-                  </svg>
-                </span>
-              </label> 
+            <label for="user-privacy" class="policy-text">I accept the terms and conditions of the&nbsp<a class="policy-terms" href="">Privacy Policy</a> 
+              <span class="icon-check"> 
+                <svg class="checkbox-icon"
+                  width="10"
+                  height="8">
+                    <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+            </label> 
           </div>
           <button type="submit" class="submit-btn">Send</button>
-      </form>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
