--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
               id="user-privacy"
               value="true" 
             />
-            <label for="user-privacy" class="policy-text">I accept the terms and conditions of the&nbsp<a class="policy-terms" href="">Privacy Policy</a> 
+            <label for="user-privacy" class="policy-text">I accept the terms and conditions of the &nbsp; <a class="policy-terms" href="">Privacy Policy</a> 
               <span class="icon-check"> 
                 <svg class="checkbox-icon"
                   width="10"
