--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
               id="user-privacy"
               value="true" 
             />
-            <label for="user-privacy" class="policy-text">I accept the terms and conditions of the &nbsp; <a href="">Privacy Policy</a> 
+            <label for="user-privacy" class="policy-text"> 
               <span class="icon-check"> 
                 <svg class="checkbox-icon"
                   width="10"
@@ -579,6 +579,7 @@
                     <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
+              I accept the terms and conditions of the &nbsp; <a href="">Privacy Policy</a>
             </label> 
           </div>
           <button type="submit" class="submit-btn">Send</button>
